Closed
Bug 1336024
Opened 9 years ago
Closed 9 years ago
Split Image selection logic from ImageHost
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: sotaro, Assigned: sotaro)
References
Details
Attachments
(1 file, 1 obsolete file)
|
46.75 KB,
patch
|
sotaro
:
review+
|
Details | Diff | Splinter Review |
It is a preparation for Bug 1336021.
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 1•9 years ago
|
||
| Assignee | ||
Updated•9 years ago
|
Component: Graphics: Layers → Graphics: WebRender
| Assignee | ||
Comment 2•9 years ago
|
||
| Assignee | ||
Updated•9 years ago
|
Attachment #8832808 -
Flags: review?(nical.bugzilla)
Comment 3•9 years ago
|
||
Comment on attachment 8832808 [details] [diff] [review]
patch - Split Image selection logic from ImageHost
Review of attachment 8832808 [details] [diff] [review]:
-----------------------------------------------------------------
::: gfx/layers/ImageCompositeTypes.h
@@ +11,5 @@
> +
> +namespace mozilla {
> +namespace layers {
> +
> +struct ImageCompositeNotificationInfo {
Is it worth adding a new file for this? How about placing this in CompositorTypes.h?
Attachment #8832808 -
Flags: review?(nical.bugzilla) → review+
| Assignee | ||
Comment 4•9 years ago
|
||
(In reply to Nicolas Silva [:nical] from comment #3)
>
> Is it worth adding a new file for this? How about placing this in
> CompositorTypes.h?
Thanks for the comment. I am going to add ImageCompositeNotificationInfo to CompositorTypes.h.
My concern was adding the following to existing header file.
> #include "base/process.h"
> #include "mozilla/layers/LayersMessages.h"
| Assignee | ||
Comment 5•9 years ago
|
||
CompositorTypes.h is included by IPC related headers. Then just adding '#include "mozilla/layers/LayersMessages.h"' to CompositorTypes.h caused build failures like the following. Then it seems better to keep attachment 8832808 [details] [diff] [review].
> error: ‘TextureFlags’ is not a member of ‘mozilla::layers’
| Assignee | ||
Comment 6•9 years ago
|
||
Moved ImageCompositeNotificationInfo to CompositableHost.h
Attachment #8832808 -
Attachment is obsolete: true
Attachment #8834282 -
Flags: review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/a24574573128
Split Image selection logic from ImageHost r=nical
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•