Bug 1336024 - Split Image selection logic from ImageHost r=nical

--HG--
rename : gfx/layers/composite/ImageHost.cpp => gfx/layers/composite/ImageComposite.cpp
rename : gfx/layers/composite/ImageHost.h => gfx/layers/composite/ImageComposite.h